ui: tweak the options page style
I tested the RTL language (Arabic), and noticed that the port number field,
which is LTR, looks odd. For now, we align numbers to the right regardless
of text direction and await feedback from users of RTL languages.

--- a/ext/options.css
+++ b/ext/options.css
@@ -43,7 +43,7 @@ input {
   height: 100%;
 
   &[type="number"] {
-    text-align: var(--align-end);
+    text-align: right;
   }
   &[type="reset"] {
     height: var(--in-content-button-height);
